# f1_performance_tool

./: .gitignore  ANALYSIS_NOTES.md  README.md  analyse_race_data.py  main.py  pyproject.toml  requirements.txt  test_pacejka.py  test_tyre_degradation.py
analysis_results/: race_analysis_2022_British_R_20260311_181418.json  race_analysis_2022_British_R_20260311_181418.md
cache/2018/2018-05-27_Monaco_Grand_Prix/2018-05-26_Qualifying/: driver_info.ff1pkl
cache/2022/2022-07-03_British_Grand_Prix/2022-07-03_Race/: _extended_timing_data.ff1pkl  timing_app_data.ff1pkl
core/: analysis.py  data_loader.py  data_processing.py  models.py
features/: gravitation.cpp  pacejka_calculator.py  tyre_degradation.py  tyre_temperature.py  tyre_temperature_modell.md
features/f1_cpp_compiler/: CMakeLists.txt  aero_calc.cpp  aero_coefficient.h  pacejka.cpp  pacejkacoefficients.h  pacejkatyre.h
tests/: test_analysis.py  test_loader.py
ui/: menus.py  ui_functions.py
utils/: check_fastf1.py
