[project]
name = "bmw-f1-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "art>=6.5",
    "asciimatics>=1.15.0",
    "fastf1>=3.8.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "simple-term-menu>=1.6.6",
    "textual>=8.0.0",
]
